# libriscribe

./: .actrc  .bandit  .coverage  .env.example  .gitattributes  .gitignore  .latexindent.yaml  .markdownlint.yaml  .opencommitignore  .pre-commit-config.yaml  .secrets.baseline  .trunkignore  .vulture  .vulture_whitelist  .yamllint  404.html  AGENTS.md  CONTRIBUTING.md  CREDITS  GEMINI.md  INSTALL.md  LICENSE  README.md  TODO.md  characters.json  codeviz_report_can_the_code_be_improved_for_clarity__2025-06-25T16-11-56.md  config-example.json  config-example.json5  copy_log.txt  create_book_command.py  cspell.json  debug_config.py  index.html  pyproject.toml  requirements.txt  setup.py  sitemap.xml  test_env_config.py  world.json
.github/workflows/: ci.yml  deploy.yml  docs.yml  test.yml
.kiro/: AGENT_FRAMEWORKS_REORGANIZATION.md  AUTOGEN_INTEGRATION_SUMMARY.md  CURRENT_IMPLEMENTATION_STATUS.md  DOCUMENTATION_UPDATE_SUMMARY.md  FRAMEWORK_REORGANIZATION_COMPLETE.md  IMPROVEMENTS_TODO.md  PYTHON_3_12_IMPLEMENTATION_SUMMARY.md  PYTHON_3_12_MIGRATION_GUIDE.md  README.md  REFACTORING_SUMMARY.md  TITLE_GENERATION_IMPLEMENTATION.md  TODO.md
.kiro/hooks/: doc-generator-hook.kiro.hook  security-pre-commit-scanner.json
.kiro/specs/ci-pytest-integration/: design.md  requirements.md  tasks.md
.kiro/specs/cli-book-creation/: design.md  requirements.md  tasks.md
.kiro/specs/cli-statistics-display/: design.md  requirements.md  tasks.md
.kiro/specs/code-validation/: design.md  requirements.md  tasks.md
.trunk/: custom-dictionary.txt  trunk.yaml
assets/css/: styles.1f773033.css
assets/js/: 037da40f.300fbc23.js  037da40f.a7f7c6a9.js  10f95dda.5d5378dc.js  10f95dda.8ac7f03c.js  149bd33e.6b29d97f.js  149bd33e.8d9d37e6.js  149bd33e.fdc219bd.js  17896441.508b7ae6.js  1df93b7f.9bd7d03f.js  1df93b7f.ba423a20.js  20fbffa0.915400b7.js  20fbffa0.985017f5.js  23374ca6.03d1214d.js  23374ca6.c2b3d5ef.js  2687c976.ad65735f.js  2687c976.c63ea42c.js  2e604c0f.1cf1f180.js  2e604c0f.1f97ef8a.js  341.f9b68714.js  3847b3ea.ab538149.js  3847b3ea.d48b49fc.js  3875e59b.56a0a5cc.js  3875e59b.760b95dc.js  38ec3d54.7ce212a8.js  38ec3d54.c832c811.js  393be207.89500a9d.js  393be207.d6c93beb.js  3c78297d.1eada536.js  3c78297d.887a446c.js  3f0ed400.555ad659.js  3f0ed400.c9f49366.js  42183927.28ba3fd8.js  42183927.72986b4e.js  5e95c892.d3821fb9.js  67d1e9ce.0c8a40bf.js  67d1e9ce.540021c8.js  835f4378.24bfdba0.js  835f4378.5989bc48.js  86dc203c.5be23fd4.js  86dc203c.6a997095.js  (+41 more)
conf/: default-book.yaml  default-book.yaml.jinja2
diagrams/: codeviz-diagram-2025-06-26T08-54-17.drawio  diag.mmd
docs/: INSTALLATION.md  PYTHON_VERSION_SETUP.md  ai_mock_system.md  ai_mock_system_api.md  ai_mock_system_signatures.md  ai_testing_best_practices.md  docusaurus.config.ts  exception_handling_improvements.md  index.html  package-lock.json  package.json  setup.md  tsconfig.json  validation_engine_api.md  validation_interfaces_api.md  validation_interfaces_signatures.md  validation_system.md  validation_utils_signatures.md
docs/PYTHON_VERSION_SETUP/: index.html
docs/ai_mock_system_signatures/: index.html
docs/api/: cli-api.md  cli-comprehensive.md  cli-function-signatures.md  llm-client-api.md  llm-client-signatures.md  mock-llm-client-api.md  performance-improvements-api.md  performance-improvements-signatures.md  performance-improvements-summary.md  project-manager-api.md  project-manager-signatures.md  project-manager-summary.md  timestamp-utils-api.md  validation-interfaces-api.md  validation-system.md  validation-utils-api.md
docs/cli/: book-stats-command.md
docs/development/: SCRIPTS.md  ai-testing-best-practices.md  autogen-best-practices.md  installation.md  timestamp-standards.md
docs/docs/: ai_mock_system_signatures.md  getting-started.md  intro.md  usage.md
docs/examples/: config.yaml  validation_engine_usage.py
docs/exception_handling_improvements/: index.html
docs/setup/: index.html
docs/testing/: systematic-failure-testing.md
docs/user-guide/: configuration.md  installation.md  intro.md  usage.md
docs/validation_engine_api/: index.html
docs/validation_interfaces_signatures/: index.html
docs/validation_utils_signatures/: index.html
examples/: ai_mock_system_usage.py  ai_testing_best_practices.py  cli_usage_examples.md  config.json  llm_client_usage.py  markdown_validation_example.py  models.json  performance_improvements_usage.py  project_manager_usage.py  validation_engine_usage.py  validator_lifecycle_usage.py
markdown-page/: index.html
projects/Nebula/: characters.json  outline.md  project_data.json
scripts/: build_docs.sh  check_pydantic_v1.py  cleanup_test_projects.py  debug_config.py  ensure_python_version.py  find_mock_files_from_llm_error.sh  test_docs.sh  update-stubs.py  update_docs_deps.sh  upgrade_packages.sh
src/kridrad-pipeline/: README.md  core.py
src/libriscribe/: config.py  knowledge_base.py  main.py  project_data.py  pyproject.toml  settings.py
src/libriscribe2/: __init__.py  cli.py  config.py  create_book_command.py  knowledge_base.py  process.py  settings.py
src/scribe_for_You.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
stubs/autogen_agentchat/: __init__.pyi  messages.pyi
templates/: config-metadata.yaml  default.yaml  default.yaml.j2  koma-template.tex  metadata.yaml  metadata.yaml.j2  my-highlighting.tex  printer-lulu.tex
tests/: .config-test.json.example  COVERAGE_PROGRESS.md  COVERAGE_SUMMARY.md  README.md  README_mock_failure_tests.md  config.json.example  conftest.py  test-md-error.md  test_api.py  test_base.py  test_character_generator_refactored.py  test_create_book_command.py  test_env_config.py  test_integration.py  test_language_utils.py  test_logging_fix.py  test_mock_failure_scenarios.py  test_model_config.py  test_simple.py  test_validation_engine.py
tests/integration/: test_book_creation_statistics.py  test_cli_book_stats.py  test_configuration_loading.py  test_end_to_end.py
tests/lib/: coverage.py
tests/unit/: test_config_loading.py  test_process.py
tests/utils/: __init__.py  test_data.py  test_framework.py
(+434 files in other folders)
